--- a/pom.xml
+++ b/pom.xml
@@ -22,22 +22,24 @@
       <version>10.6.0.2114</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.sonarsource.php</groupId>
       <artifactId>sonar-php-plugin</artifactId>
       <version>3.38.0.12239</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.sonarsource.php</groupId>
+      <artifactId>php-checks</artifactId>
+      <version>3.38.0.12239</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <version>5.10.3</version>
         <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.sonarsource.php</groupId>
-        <artifactId>php-checks</artifactId>
-        <version>3.38.0.12239</version>
-        <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -62,14 +64,22 @@
           </archive>
         </configuration>
       </plugin>
+
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.0</version>
-        <configuration>
-          <source>17</source>
-          <target>17</target>
-        </configuration>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <shadedArtifactAttached>false</shadedArtifactAttached>
+              <minimizeJar>true</minimizeJar>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
