--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.projectKey=rostilos_sonarqube-magento2-rules_fece34d6-8fdf-47a0-b682-4749b7a2503f
-sonar.java.binaries=**/target/classes
+sonar.java.binaries=target/classes
