--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.perpectiveteam.sonarrules</groupId>
-  <artifactId>sonarqube-magento2-rules</artifactId>
-  <version>1.1.0</version>
+  <artifactId>sonar-magento2-rules</artifactId>
+  <version>1.2.0</version>
   <name>sonarqube-magento2-rules</name>
   <packaging>sonar-plugin</packaging>
 
@@ -13,7 +13,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.debug>true</maven.compiler.debug>
-    <version.sonarqube-plugin-api>10.7.0.2191</version.sonarqube-plugin-api>
+    <version.sonarqube-plugin-api>11.3.0.2824</version.sonarqube-plugin-api>
   </properties>
 
 
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>org.sonarsource.php</groupId>
       <artifactId>sonar-php-plugin</artifactId>
-      <version>3.38.0.12239</version>
+      <version>3.45.0.12991</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.sonarsource.sonarqube</groupId>
       <artifactId>sonar-plugin-api-impl</artifactId>
-      <version>10.7.0.96327</version>
+      <version>25.4.0.105899</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
