--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                 <version>1.23.0.740</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <pluginKey>custom</pluginKey>
+                    <pluginKey>magento2php</pluginKey>
                     <pluginName>PHP Custom Rules for Magento 2 CMS</pluginName>
                     <requiredForLanguages>php</requiredForLanguages>
                     <pluginClass>org.rostilos.sonarrules.php.PHPCustomRulesPlugin</pluginClass>
