--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.perpectiveteam.sonarrules</groupId>
+    <groupId>org.rostilos.sonarrules</groupId>
     <artifactId>sonar-magento2-rules</artifactId>
     <version>1.3.0</version>
     <name>sonarqube-magento2-rules</name>
